update LeetCode Weekly Contest 478

--- a/algorithm/LeetCode/[Hard] 1147. Longest Chunked Palindrome Decomposition.md
+++ b/algorithm/LeetCode/[Hard] 1147. Longest Chunked Palindrome Decomposition.md
@@ -82,3 +82,34 @@ class Solution:
             cnt += 1
         return cnt
 ```
+
+**Solution 3: (Two Pointers, Greedy)**
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 9.72 MB, Beats 68.55%
+```
+```c++
+class Solution {
+public:
+    int longestDecomposition(string text) {
+        int ans = 0, i = 0, j = text.size() - 1;
+        string s = "", t = "";
+        while (i < j) {
+            s += text[i];
+            t = text[j] + t;
+            if (s == t){
+                ans += 1;
+                t = "";
+                s = "";
+            }
+            i += 1;
+            j -= 1;
+        }
+        ans *= 2;
+        if (i == j || s.size() != 0) {
+            ans += 1;
+        }
+        return ans;
+    }
+};
+```
