--- a/algorithm/LeetCode/[Hard] 1163. Last Substring in Lexicographical Order.md
+++ b/algorithm/LeetCode/[Hard] 1163. Last Substring in Lexicographical Order.md
@@ -65,3 +65,48 @@ class Solution:
             k = 0
         return s[i:]
 ```
+
+**Solution 3: (Two Pointers, left most largest substring)**
+
+    a b a b
+    ^i^j
+      ^i^j
+          ^j
+ans   ^^^^^
+k   0 0   1
+
+    l e e t c o d e
+    ^i^j
+        ^j
+          ^j
+          ^i^j
+              ^j
+                ^j
+                   ^j
+ans       ^^^^^^^^^^
+k   0
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 23.26 MB, Beats 21.88%
+```
+```c++
+class Solution {
+public:
+    string lastSubstring(string s) {
+        int n = s.length(), i = 0, j = 1, k = 0;
+        while (j + k < n) {
+            if (s[i + k] == s[j + k]) {
+                k += 1;
+                continue;
+            } else if (s[i + k] > s[j + k]) {
+                j += k + 1;
+            } else {
+                i = max(i + k + 1, j);
+                j = i + 1;
+            }
+            k = 0;
+        }
+        return s.substr(i);
+    }
+};
+```
