--- a/algorithm/LeetCode/[Hard] 1697. Checking Existence of Edge Length Limited Paths.md
+++ b/algorithm/LeetCode/[Hard] 1697. Checking Existence of Edge Length Limited Paths.md
@@ -147,3 +147,72 @@ public:
     }
 };
 ```
+
+**Solution 3: (Union Find, sort by query distance and group by largest till now)**
+```
+Runtime: 64 ms, Beats 68.24%
+Memory: 114.89 MB, Beats 81.26%
+```
+```c++
+class Solution {
+    vector<int> par, r;
+    int find(int x) {
+        if (par[x] != x) {
+            par[x] = find(par[x]);
+        }
+        return par[x];
+    }
+    void uni(int x, int y) {
+        int xr = find(x), yr = find(y);
+        if (xr != yr) {
+            if (r[xr] > r[yr]) {
+                par[yr] = xr;
+            } else if (r[xr] < r[yr]) {
+                par[xr] = yr;
+            } else {
+                par[xr] = yr;
+                r[yr] += 1;
+            }
+        }
+    }
+public:
+    vector<bool> distanceLimitedPathsExist(int n, vector<vector<int>>& edgeList, vector<vector<int>>& queries) {
+        int m = queries.size(), i, p, q, limit, idx, u, v;
+        par.resize(n);
+        r.resize(n);
+        for (i = 0; i < n; i ++) {
+            par[i] = i;
+            r[i] = 1;
+        }
+        for (i = 0; i < m; i ++) {
+            queries[i].push_back(i);
+        }
+        sort(queries.begin(), queries.end(), [](auto &qa, auto &qb){
+            return qa[2] < qb[2]; 
+        });
+        sort(edgeList.begin(), edgeList.end(), [](auto &ea, auto &eb){
+            return ea[2] < eb[2];
+        });
+        i = 0;
+        vector<bool> ans(m);
+        for (auto &query: queries) {
+            p = query[0];
+            q = query[1];
+            limit = query[2];
+            idx = query[3];
+            while (i < edgeList.size() && edgeList[i][2] < limit) {
+                u = edgeList[i][0];
+                v = edgeList[i][1];
+                uni(u, v);
+                i += 1;
+            }
+            if (find(p) == find(q)) {
+                ans[idx] = true;
+            } else {
+                ans[idx] = false;
+            }
+        }
+        return ans;
+    }
+};
+```
