--- a/algorithm/LeetCode/[Hard] 1755. Closest Subsequence Sum.md
+++ b/algorithm/LeetCode/[Hard] 1755. Closest Subsequence Sum.md
@@ -69,3 +69,45 @@ class Solution:
             if 0 < k: ans = min(ans, goal - x - nums0[k-1])
         return ans
 ```
+
+**Solution 2: (Binary Search, split 2 set then sort one and binary search)**
+```
+Runtime: 889 ms, Beats 37.76%
+Memory: 82.56 MB, Beats 81.35%
+```
+```c++
+class Solution {
+   vector<int> gen_subset(int i, int j, vector<int> &nums) {
+        int n = j - i + 1, mask, k, a;
+        vector<int> rst;
+        for (mask = 0; mask < (1 << n); ++mask) {
+            a = 0;
+            for (k = 0; k < n; k ++) {
+                if (mask & (1 << k)) {
+                    a += nums[i + k];
+                }
+            }
+            rst.push_back(a);
+        }
+        return rst;
+    }
+public:
+    int minAbsDifference(vector<int>& nums, int goal) {
+        int n = nums.size(), ans = INT_MAX;
+        vector<int> left, right;
+        left = move(gen_subset(0, n / 2 - 1, nums));
+        right = move(gen_subset(n / 2, n - 1, nums));
+        sort(right.begin(), right.end());
+        for (auto a: left) {
+            auto it = lower_bound(right.begin(), right.end(), goal - a);
+            if (it != right.end()) {
+                ans = min(ans, *it - goal + a);
+            }
+            if (it != right.begin()) {
+                ans = min(ans, goal - a - *prev(it));
+            }
+        }
+        return ans;
+    }
+};
+```
