--- a/algorithm/LeetCode/[Hard] 1782. Count Pairs Of Nodes.md
+++ b/algorithm/LeetCode/[Hard] 1782. Count Pairs Of Nodes.md
@@ -44,7 +44,7 @@ Output: [10,10,9,8,6]
 
 # Submissions
 ---
-**Solution 1: (Two Problems O(q * (n + e)))**
+**Solution 1: (Two Problems, Counter, cnt[a] + cnt[b] - cnt[a & b], O(q * (n + e)))**
 
 I somehow got derailed by the a < b constraint. In reality, it only means that we should not double-count the nodes.
 
@@ -59,35 +59,63 @@ How many connected node pairs are there, so that cnt[i] + cnt[j] is greater than
 We can solve it in O(e) as there are no more than e connected node pairs.
 The result is [1] - [2]. Pairs in [2] were incldued in [1] but they should not.
 
+    n = 4, edges = [[1,2],[2,4],[1,3],[2,3],[2,1]], queries = [2,3]
+
+            1 2 3 4
+cnt         3 4 2 1
+shared
+1             2 1
+2               1 1
+3                
+4
+
+q:            v
+sorted_cnt: 1 2 3 4
+            ^     ^   3
+            ^   ^     2
+            ^ ^       1
+
+q:              v
+sorted_cnt: 1 2 3 4
+            ^     ^   3
+            ^   ^     2
+
+
 ```
-Runtime: 551 ms
-Memory: 187.5 MB
+Runtime: 167 ms, Beats 76.11%
+Memory: 192.02 MB, Beats 40.00%
 ```
 ```c++
 class Solution {
 public:
     vector<int> countPairs(int n, vector<vector<int>>& edges, vector<int>& queries) {
-        vector<int> cnt(n + 1), sorted_cnt(n + 1), res;
-        vector<unordered_map<int, int>> shared(n + 1);
+        vector<int> cnt(n + 1), sorted_cnt(n + 1), ans;
+        vector<unordered_map<int, int>> shared(n + 1);  // u -> {v, k}
         for (auto &e : edges) {
             sorted_cnt[e[0]] = cnt[e[0]] = cnt[e[0]] + 1;
             sorted_cnt[e[1]] = cnt[e[1]] = cnt[e[1]] + 1;
-            ++shared[min(e[0], e[1])][max(e[0], e[1])];
+            shared[min(e[0], e[1])][max(e[0], e[1])] += 1;
         }
         sort(begin(sorted_cnt), end(sorted_cnt));
         for (auto &q : queries) {
-            res.push_back(0);
-            for (int i = 1, j = n; i < j; )
-                if (q < sorted_cnt[i] + sorted_cnt[j])
-                    res.back() += (j--) - i;
-                else
-                    ++i;
-            for (auto i = 1; i <= n; ++i)
-                for (auto [j, sh_cnt]: shared[i])
-                    if (q < cnt[i] + cnt[j] && q + sh_cnt >= cnt[i] + cnt[j])
-                        --res.back();
+            ans.push_back(0);
+            for (auto i = 1, j = n; i < j; ) {
+                if (q < sorted_cnt[i] + sorted_cnt[j]) {
+                    ans.back() += j - i;
+                    j -= 1;
+                } else {
+                    i += 1;
+                }
+            }
+            for (auto i = 1; i <= n; i += 1) {
+                for (auto [j, sh_cnt]: shared[i]) {
+                    if (q < cnt[i] + cnt[j] && q + sh_cnt >= cnt[i] + cnt[j]) {
+                        ans.back() -= 1;
+                    }
+                }
+            }
         }
-        return res;
+        return ans;
     }
 };
 ```
