--- a/algorithm/LeetCode/[Hard] 1793. Maximum Score of a Good Subarray.md
+++ b/algorithm/LeetCode/[Hard] 1793. Maximum Score of a Good Subarray.md
@@ -88,5 +88,36 @@ public:
         return max_score;
     }
 };
+```
 
+**Solution 3: (Two Pointers, expand around center, greedy larger number)**
+
+    min(nums[i], nums[i+1], ..., nums[j]) * (j - i + 1)
+   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^
+                greedy                        fixed
+                                             j - (i - 1) + 1 = j - i + 2
+                                             (j + 1) - i + 1 = j - i + 2
+
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 93.22 MB, Beats 93.99%
+```
+```c++
+class Solution {
+public:
+    int maximumScore(vector<int>& nums, int k) {
+        int n = nums.size(), i = k, j = k, a = nums[k], ans = nums[k];
+        while (i || j < n - 1) {
+            if (j == n - 1 || (i && nums[i - 1] >= nums[j + 1])) {
+                i -= 1;
+                a = min(a, nums[i]);
+            } else {
+                j += 1;
+                a = min(a, nums[j]);
+            }
+            ans = max(ans, a * (j - i + 1));
+        }
+        return ans;
+    }
+};
 ```
