--- a/algorithm/LeetCode/[Hard] 2035. Partition Array Into Two Arrays to Minimize Sum Difference.md
+++ b/algorithm/LeetCode/[Hard] 2035. Partition Array Into Two Arrays to Minimize Sum Difference.md
@@ -109,3 +109,48 @@ class Solution:
                         ans = min(ans, diff) 
         return ans
 ```
+
+**Solution 2: (Binary Search, split to half then sort and binary search all possibility)**
+```
+Runtime: 435 ms, Beats 45.02%
+Memory: 73.50 MB, Beats 52.44%
+```
+```c++
+class Solution {
+    void gen_subset(int i, int j, vector<int> &nums, vector<vector<int>> &rst) {
+        int k, c;
+        for (auto a = 0; a < (1 << (j - i + 1)); a ++) {
+            k = 0, c = 0;
+            for (auto b = 0; (1 << b) <= a; b ++) {
+                if ((1 << b) & a) {
+                    k += 1;
+                    c += nums[i + b];
+                }
+            }
+            rst[k].push_back(c);
+        }
+    }
+public:
+    int minimumDifference(vector<int>& nums) {
+        int n = nums.size() / 2, total = accumulate(nums.begin(), nums.end(), 0), i, ans = INT_MAX;
+        vector<vector<int>> left(n + 1), right(n + 1);
+        gen_subset(0, n - 1, nums, left);
+        gen_subset(n, 2 * n - 1, nums, right);
+        for (i = 0; i <= n; i ++) {
+            sort(right[i].begin(), right[i].end());
+        }
+        for (i = 0; i <= n / 2; i ++) {
+            for (auto a: left[i]) {
+                auto it = lower_bound(right[n - i].begin(), right[n - i].end(), (total - 2 * a) / 2);
+                if (it != right[n - i].end()) {
+                    ans = min(ans, abs(a + (*it) - (total - a - *it)));
+                }
+                if (it != right[n - i].begin()) {
+                    ans = min(ans, abs(a + *prev(it) - (total - a - *prev(it))));
+                }
+            }
+        }
+        return ans;
+    }
+};
+```
