--- a/algorithm/LeetCode/[Hard] 2071. Maximum Number of Tasks You Can Assign.md
+++ b/algorithm/LeetCode/[Hard] 2071. Maximum Number of Tasks You Can Assign.md
@@ -173,3 +173,62 @@ public:
     }
 };
 ```
+
+**Solution 3: (Binary Search, sort, upper bound, deque, greedy min task with max worker)**
+
+            workers[j] >= tasks[i]
+
+                              max task
+                                 v                
+   largest workers[j] <- smallest task[i]
+       
+
+        dq [workers[j]]
+    ^begin  ^end
+    min      max
+```
+Runtime: 71 ms, Beats 87.60%
+Memory: 77.87 MB, Beats 82.48%
+```
+```c++
+class Solution {
+    bool check(int mid, vector<int> &tasks, vector<int> &workers, int pills, int strength) {
+        int n = tasks.size(), m = workers.size(), i, j = m - 1;
+        deque<int> dq;
+        for (i = mid - 1; i >= 0; i --) {
+            while (j >= m - mid && workers[j] + strength >= tasks[i]) {
+                dq.push_front(workers[j]);
+                j -= 1;
+            }
+            if (dq.size() == 0) {
+                return false;
+            } else if (dq.back() >= tasks[i]) {
+                dq.pop_back();
+            } else {
+                if (!pills) {
+                    return false;
+                }
+                pills -= 1;
+                dq.pop_front();
+            }
+        }
+        return true;
+    }
+public:
+    int maxTaskAssign(vector<int>& tasks, vector<int>& workers, int pills, int strength) {
+        int n = tasks.size(), m = workers.size(), left = 0, right = min(n, m), mid, ans;
+        sort(tasks.begin(), tasks.end());
+        sort(workers.begin(), workers.end());
+        while (left <= right) {
+            mid = left + (right - left) / 2;
+            if (!check(mid, tasks, workers, pills, strength)) {
+                right = mid - 1;
+            } else {
+                ans = mid;
+                left = mid + 1;
+            }
+        }
+        return ans;
+    }
+};
+```
