--- a/algorithm/LeetCode/[Hard] 2122. Recover the Original Array.md
+++ b/algorithm/LeetCode/[Hard] 2122. Recover the Original Array.md
@@ -83,3 +83,89 @@ public:
     }
 };
 ```
+
+**Solution 2: (Try possible k, sort)**
+
+              a1     a1 + 2*k
+              b -k    b + k
+              v       v
+sorted_arr a0 a1 a2 ...... an
+            ^    ^
+            a-k  a+k
+            a0   a0 + 2*k
+
+```
+Runtime: 1078 ms, Beats 33.64%
+Memory: 427.00 MB, Beats 24.30%
+```
+```c++
+class Solution {
+public:
+    vector<int> recoverArray(vector<int>& nums) {
+        multiset<int> s(nums.begin(), nums.end());
+        int a = *begin(s), k;
+        for (auto it = next(s.begin()); it != s.end(); it++) {
+            k = (*it - a) / 2;
+            if (k && a + 2 * k == *it) {
+                vector<int> ans;
+                auto cs = s;
+                while (!cs.empty()) {
+                    auto it_h = cs.find(*cs.begin() + 2 * k);
+                    if (it_h == cs.end()) {
+                        break;
+                    }
+                    ans.push_back(*cs.begin() + k);
+                    cs.erase(cs.begin());
+                    cs.erase(it_h);
+                }
+                if (cs.empty()) {
+                    return ans;
+                }
+            }
+        }
+        return {};
+    }
+};
+```
+
+**Solution 3: (Try possible k, sort, map)**
+```
+Runtime: 1066 ms, Beats 38.32%
+Memory: 424.39 MB, Beats 28.04%
+```
+```c++
+class Solution {
+public:
+    vector<int> recoverArray(vector<int>& nums) {
+        map<int, int> cnt;
+        for (auto &num: nums) {
+            cnt[num] += 1;
+        }
+        int n = nums.size() / 2, a = cnt.begin()->first, k;
+        for (auto it = next(cnt.begin()); it != cnt.end(); it++) {
+            k = (it->first - a) / 2;
+            if (k && a + 2 * k == it->first) {
+                vector<int> ans;
+                auto cur = cnt;
+                for (auto cur_it = cur.begin(); cur_it != cur.end(); cur_it++) {
+                    if (cur_it->second == 0) {
+                        continue;
+                    }
+                    while (cur_it->second && cur[cur_it->first + 2 * k]) {
+                        cur_it->second -= 1;
+                        cur[cur_it->first + 2 * k] -= 1;
+                        ans.push_back(cur_it->first + k);
+                    }
+                    if (cur_it->second) {
+                        break;
+                    }
+                }
+                if (ans.size() == n) {
+                    return ans;
+                }
+            }
+        }
+        return {};
+    }
+};
+```
