--- a/algorithm/LeetCode/[Hard] 2872. Maximum Number of K-Divisible Components.md
+++ b/algorithm/LeetCode/[Hard] 2872. Maximum Number of K-Divisible Components.md
@@ -88,3 +88,35 @@ public:
     }
 };
 ```
+
+**Solution 2: (DFS, post order)**
+```
+Runtime: 81 ms, Beats 96.80%
+Memory: 173.08 MB, Beats 96.09%
+```
+```c++
+class Solution {
+    pair<int, int> dfs(int u, int p, vector<vector<int>> &g, vector<int> &values, int k) {
+        int rst = 0, a = values[u];
+        for (auto &v: g[u]) {
+            if (v != p) {
+                auto [crst, ca] = dfs(v, u, g, values, k);
+                rst += crst;
+                a += ca;
+            }
+        }
+        a %= k;
+        return {rst + (a == 0), a};
+    }
+public:
+    int maxKDivisibleComponents(int n, vector<vector<int>>& edges, vector<int>& values, int k) {
+        vector<vector<int>> g(n);
+        for (auto &e: edges) {
+            g[e[0]].push_back(e[1]);
+            g[e[1]].push_back(e[0]);
+        }
+        auto [ans, _] = dfs(0, -1, g, values, k);
+        return ans;
+    }
+};
+```
