--- a/algorithm/LeetCode/[Hard] 3710. Maximum Partition Factor.md
+++ b/algorithm/LeetCode/[Hard] 3710. Maximum Partition Factor.md
@@ -154,3 +154,71 @@ public:
     }
 };
 ```
+
+**Solution 2: (DFS, Binary Search, upper bound, bipartite)**
+```
+Runtime: 511 ms, Beats 54.49%
+Memory: 166.86 MB, Beats 69.47%
+```
+```c++
+class Solution {
+    bool dfs(int u, int c, vector<int> &color, vector<vector<int>> &g) {
+        color[u] = c;
+        for (auto &v: g[u]) {
+            if (color[v] == -1 && !dfs(v, c ^ 1, color, g)) {
+                return false;
+            } else if (color[v] == c) {
+                return false;
+            }
+        }
+        return true;
+    }
+    int dist(vector<int> &pa, vector<int> &pb) {
+        return abs(pa[0] - pb[0]) + abs(pa[1] - pb[1]);
+    }
+    bool check(int mid, vector<vector<int>> &points){
+        int n = points.size(), i, j;
+        vector<vector<int>> g(n);
+        vector<int> color(n, -1);
+        for (i = 0; i < n - 1; i ++) {
+            for (j = i + 1; j < n; j ++) {
+                if (dist(points[i], points[j]) < mid) {
+                    g[i].push_back(j);
+                    g[j].push_back(i);
+                }
+            }
+        }
+        for (i = 0; i < n; i ++) {
+            if (color[i] == -1) {
+                if (!dfs(i, 0, color, g)) {
+                    return false;
+                }
+            }
+        }
+        return true;
+    }
+public:
+    int maxPartitionFactor(vector<vector<int>>& points) {
+        int n = points.size(), i, j, left = 0, right = 0, mid, ans = 0;
+        if (n == 2) {
+            return 0;
+        }
+        for (i = 0; i < n - 1; i ++){
+            for (j = i + 1; j < n; j ++) {
+                right = max(right, dist(points[i], points[j]));
+            }
+        }
+        while (left <= right) {
+            mid = left + (right - left) / 2;
+            cout << left << "," << right << "," << mid << endl;
+            if (!check(mid, points)) {
+                right = mid - 1;
+            } else {
+                ans = mid;
+                left = mid + 1;
+            }
+        }
+        return ans;
+    }
+};
+```
