--- a/algorithm/LeetCode/[Hard] 1537. Get the Maximum Score.md
+++ b/algorithm/LeetCode/[Hard] 1537. Get the Maximum Score.md
@@ -133,3 +133,47 @@ public:
     }
 };
 ```
+
+**Solution 3: (Two Pointers, DP Bottom-Up, partition the array by common integers)**
+
+a   2  6  11 20 30
+                    vi
+    2  4  5  8  10  ~
+       |     |
+       4  6  8   9  ~
+                    ^j
+b      6  12 20 29
+
+```
+Runtime: 0 ms, Beats 100.00%
+Memory: 59.64 MB, Beats 67.68%
+```
+```c++
+class Solution {
+public:
+    int maxSum(vector<int>& nums1, vector<int>& nums2) {
+        nums1.push_back(INT_MAX);
+        nums2.push_back(INT_MAX);
+        int m = nums1.size(), n = nums2.size(), i = 0, j = 0, MOD = 1e9 + 7;
+        long long a = 0, b = 0;
+        while (i < m && j < n) {
+            if (nums1[i] < nums2[j]) {
+                a += nums1[i];
+                i += 1;
+            } else if (nums1[i] > nums2[j]) {
+                b += nums2[j];
+                j += 1;
+            } else {
+                a = max(a, b);
+                if (i != m - 1) {
+                    a += nums1[i];
+                }
+                b = a;
+                i += 1;
+                j += 1;
+            }
+        }
+        return a % MOD;
+    }
+};
+```
