--- a/algorithm/LeetCode/[Hard] 2193. Minimum Number of Moves to Make Palindrome.md
+++ b/algorithm/LeetCode/[Hard] 2193. Minimum Number of Moves to Make Palindrome.md
@@ -62,24 +62,48 @@ class Solution:
 ```
 
 **Solution 2: (Greedy, move the characters to match string prefix)**
+
+    x-->      x
+    ...a.....a.
+    ---      --
+    prefix   suffix
+
+           v
+         
+    xx       xx
+    .a.......a.
+    ---      --
+    prefix   suffix
+
+          v
+        ...
+          v
+
+    xx-->    xx
+    ....a...a..
+    -----   ---
+    prefix  suffix
+
 ```
-Runtime: 30 ms
-Memory Usage: 6.8 MB
+Runtime: 1 ms, Beats 98.86%
+Memory: 9.65 MB, Beats 28.98%
 ```
 ```c++
 class Solution {
 public:
     int minMovesToMakePalindrome(string s) {
-        int res = 0;
-        while (s.size()) {   
-            int i = s.find(s.back());
-            if (i == s.size() - 1)
-                res += i / 2;
-            else
-                res += i, s.erase(i, 1);
+        int ans = 0;
+        while (s.size()) {
+            auto i = s.find(s.back());
+            if (i == s.size() - 1) {
+                ans += s.size() / 2;
+            } else {
+                ans += i;
+                s.erase(i, 1);
+            }
             s.pop_back();
         }
-        return res; 
+        return ans;
     }
 };
 ```
