--- a/algorithm/LeetCode/[Hard] 2435. Paths in Matrix Whose Sum Is Divisible by K.md
+++ b/algorithm/LeetCode/[Hard] 2435. Paths in Matrix Whose Sum Is Divisible by K.md
@@ -128,3 +128,46 @@ public:
     }
 };
 ```
+
+**Solution 4: (DP Bottom-Up)**
+```
+Runtime: 203 ms, Beats 84.60%
+Memory: 131.86 MB, Beats 89.57%
+```
+```c++
+class Solution {
+public:
+    int numberOfPaths(vector<vector<int>>& grid, int k) {
+        int m = grid.size(), n = grid[0].size(), i, j, r, a, MOD = 1e9 + 7;
+        vector<vector<vector<int>>> dp(m, vector<vector<int>>(n, vector<int>(k)));
+        dp[0][0][grid[0][0] % k] = 1;
+        a = grid[0][0];
+        for (i = 1; i < m; i ++) {
+            a += grid[i][0];
+            a %= k;
+            dp[i][0][a] += 1;
+        }
+        a = grid[0][0];
+        for (j = 1; j < n; j ++) {
+            a += grid[0][j];
+            a %= k;
+            dp[0][j][a] += 1;
+        }
+        for (i = 1; i < m; i ++) {
+            for (j = 1; j < n; j ++) {
+                for (r = 0; r < k; r ++) {
+                    if (dp[i - 1][j][r]) {
+                        dp[i][j][(r + grid[i][j]) % k] += dp[i - 1][j][r];
+                        dp[i][j][(r + grid[i][j]) % k] %= MOD;
+                    }
+                    if (dp[i][j - 1][r]) {
+                        dp[i][j][(r + grid[i][j]) % k] += dp[i][j - 1][r];
+                        dp[i][j][(r + grid[i][j]) % k] %= MOD;
+                    }
+                }
+            }
+        }
+        return dp[m - 1][n - 1][0];
+    }
+};
+```
