--- a/algorithm/LeetCode/[Hard] 3203. Find Minimum Diameter After Merging Two Trees.md
+++ b/algorithm/LeetCode/[Hard] 3203. Find Minimum Diameter After Merging Two Trees.md
@@ -310,7 +310,29 @@ public:
 };
 ```
 
-**Solution 4: (Topological Sort)**
+**Solution 4: (Topological Sort, level order)**
+
+case 1: ans = 7 
+        1 - 2 - 3 - 0
+            ^
+        1   |       3 - 5
+        |   v       |
+    4 - 0 - 2 - 7 - 6
+        |
+        8 - 9
+
+case 2: ans = 7 (1 ... 7)
+    1 - 0    9
+        |    |
+        2 -  3 - 6
+             |
+             5 - 4 - 8 - 7
+             ^
+             v
+             0
+           / | \
+          1  2  3
+
 ```
 Runtime: 261 ms
 Memory: 296.29 MB
